VFS-3440 fixed tooltip overflow issues in charts

--- a/src/app/styles/chartist-overrides.scss
+++ b/src/app/styles/chartist-overrides.scss
@@ -95,7 +95,7 @@ $chart-tooltip-arrow-size: 20px;
     border: 1px solid $main-border-color;
     border-radius: $border-radius-small;
     background-color: $color-one-white;
-    z-index: 1;
+    z-index: 2;
     font-size: $chart-font-size-base;
     &.active {
       display: block;
